tests/compile_fail/failure_to_infer_store_type.stderr
error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:40
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]
  |                                        ^^^^^^^^^^^^^^^^ cannot call associated function of trait
  |
help: use a fully-qualified path to a specific available implementation (271 found)
  |
3 | #[memoized(key_expr = (), store_init = </* self type */ as Default>::default())]
  |                                        +++++++++++++++++++        +

error[E0283]: type annotations needed
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:1
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `_: MemoizationStore<(), ()>` found in the `michie` crate:
          - impl<I, R> MemoizationStore<I, R> for BTreeMap<I, R>
            where I: Ord, R: Clone;
          - impl<I, R> MemoizationStore<I, R> for HashMap<I, R>
            where I: std::cmp::Eq, I: Hash, R: Clone;
note: required by a bound in `inference_hint`
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:1
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `inference_hint`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
